# django_slots

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
django_slots/: __init__.py  apps.py  components.py  utils.py
django_slots/templatetags/: slot_tags.py
django_template_component/: apps.py  components.py
django_template_component/templatetags/: slot_tags.py
tests/: settings.py  test_django_slots.py  test_django_template_component.py
tests/app/templates/components/: button.html  details.html  section.html
tests/app/templates/components/foo/: hr.html
tests/app/templatetags/: component_tags.py  components.py
