[tool.poetry]
name = "django_template_component"
version = "0.1.5"
description = "django_template_component = inclusion tag + blocks"
authors = ["Neil Lyons <nwjlyons@googlemail.com>"]
readme = "README.md"
keywords = ["component", "block", "slot", "template", "django"]
repository = "https://github.com/nwjlyons/django_template_component"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Django = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
