[tool.poetry]
name = "django_slots"
version = "0.1.1"
description = "django_slots = inclusion tag + blocks"
authors = ["Neil Lyons <nwjlyons@googlemail.com>"]
readme = "README.md"
keywords = ["slot", "component", "block", "template", "django"]
repository = "https://github.com/nwjlyons/django_slots"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Django = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
